Fix offering images on small screens

--- a/_sass/basically-basic/_entries.scss
+++ b/_sass/basically-basic/_entries.scss
@@ -89,6 +89,7 @@
 
 .entry-content {
   .offering-image {
+    width: 100%;
     max-width: 30rem;
   }
 }
